delete method re-worked and minified js/css added
