# inno-php-trainee-API-Specification.json
@@ -6,6 +6,7 @@
     "version": "1.0.0"
   },
   "host": "localhost",
+  "schemes" : ["http"],
   "paths": {
     "/": {
       "get": {
@@ -26,13 +27,14 @@
           "localhost"
         ],
         "summary": "select needed database",
+        "consumes" : ["application/x-www-form-urlencoded"],
         "parameters": [
           {
             "name": "dbType",
             "description": "type of database",
             "required": false,
-            "in": "body",
-            "type": "string"
+            "in": "formData",
+            "type" : "string"
           }
         ],
         "responses": {
@@ -48,6 +50,22 @@
           "users"
         ],
         "summary": "get all users",
+        "parameters": [
+          {
+            "name": "page",
+            "description": "page number",
+            "required": true,
+            "in": "query",
+            "type" : "string"
+          },
+          {
+            "name": "per_page",
+            "description": "users per pager",
+            "required": true,
+            "in": "query",
+            "type" : "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful operation"
@@ -96,34 +114,29 @@
           "users"
         ],
         "summary": "create a new user",
+        "consumes" : ["application/x-www-form-urlencoded"],
         "parameters": [
           {
-            "name": "name",
-            "description": "user name",
+            "name": "user",
+            "in": "body",
             "required": true,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "description": "user email",
-            "required": true,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "gender",
-            "description": "user gender",
-            "required": true,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "status",
-            "description": "user status",
-            "required": true,
-            "in": "formData",
-            "type": "string"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "gender": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "string"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -164,34 +177,32 @@
           "users"
         ],
         "summary": "update user data",
+        "consumes" : ["application/json"],
         "parameters": [
           {
-            "name": "name",
-            "description": "user name",
+            "name": "user",
+            "in": "body",
             "required": false,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "description": "user email",
-            "required": false,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "gender",
-            "description": "user gender",
-            "required": false,
-            "in": "formData",
-            "type": "string"
-          },
-          {
-            "name": "status",
-            "description": "user status",
-            "required": false,
-            "in": "formData",
-            "type": "string"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "gender": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "string"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -230,17 +241,22 @@
       }
     },
     "/users/delete-selected": {
-      "delete": {
+      "post": {
         "tags": [
           "users"
         ],
         "summary": "delete multiple users with such IDs",
+        "consumes" : ["application/x-www-form-urlencoded"],
         "parameters": [
           {
-            "name": "id",
+            "name": "selected[id]",
             "description": "user ID",
             "required": true,
-            "in": "body"
+            "in": "formData",
+            "type" : "array",
+            "items" : {
+
+            }
           }
         ],
         "responses": {
